@@ -110,6 +110,7 @@ Supported Presently
 
 Changelog for 1.3.42
 * Fix for missing emails when emailing orders/quotations (1073, Chris T)
+* Fix doubled email addresses when emailing invoice (1186, Pongracz I)
 
 Changelog for 1.3.41
 * Fix for invalid ref when entering payment  (John Locke)
